package com.polydome.godemon.domain.entity;

import lombok.Data;

@Data
public class Challenger {
    String id;
    public String inGameName;
    public long discordId;
}
