package com.polydome.godemon.smitedata.entity;

import lombok.AllArgsConstructor;

@AllArgsConstructor
public class EmoteHost {
    public final int id;
    public final long guildId;
}
