package com.polydome.godemon.smitedata.entity;

import lombok.AllArgsConstructor;

@AllArgsConstructor
public class God {
    public final Integer id;
    public final String name;
    public final String displayName;
}
